--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -781,7 +781,8 @@ Greater than 4x speedup (bold-faced in Table~\ref{tbl:cascade_m2070_overlap}) is
 
 
 \subsection{Multiple Kernel Scheduling}
-describe fermi's ability to schedule multiple kernels, what it means for our queues. Do we need multiple queues, or just one that is non-blocking. How do we indicate we are done communicating if there is no queue to add markers to? 
+describe fermi's ability to schedule multiple kernels, what it means for our queues. 
+%Do we need multiple queues, or just one that is non-blocking. How do we indicate we are done communicating if there is no queue to add markers to? 
 
 
 \section{HPC Spear Cluster} 
