--- a/latex/implicit_pde_solutions.tex
+++ b/latex/implicit_pde_solutions.tex
@@ -233,7 +233,9 @@ The distributed GMRES implementation depends on two MPI collectives: MPI\_Alltoa
 
 
 
-We solve the PDE on the surface of the sphere as an example for one and multiple GPUs. Boundary conditions detract from the accuracy of RBF-FD and introduce other issues such as Runge phenomena \cite{RBFRungePaper}, so we first verify the solution without boundaries. Also, this section 
+We solve the PDE on the surface of the sphere as an example for one and multiple GPUs. 
+
+%TODO: Boundary conditions detract from the accuracy of RBF-FD and introduce other issues such as Runge phenomena \cite{RBFRungePaper}, so we first verify the solution without boundaries. Also, this section 
 
 %Viscous Stokes flow is described by the governing equations
 %	\begin{align}
