--- a/latex/performance_content/optimizations.tex
+++ b/latex/performance_content/optimizations.tex
@@ -20,7 +20,7 @@ This appendix provides new data from Keeneland for direct comparison with \cite{
 An SpMV requires $N * n * 2$ floating point operations due to the 2 operations, multiply and add, required when applying $N$ dot-products of size $n$. An iteration of RK4 requires four evaluations of the function $F(t,\vu)$, whose operation count varies by application, plus $7*N$ operations (four additions and three multiplications) per time-step. 
 
 In Figures~\ref{fig:gflops_cpu_1proc_keeneland}, \ref{fig:gflops_gpu_1proc_oneWarp_keeneland} and \ref{fig:gflops_gpu_1proc_oneThread_keeneland}, the function $F(t,\vu)$ performs three independent SpMVs and two AXPY operations ($2*N$ each) for a total of $6*N*n + 4*N$ operations. Thus the total operation count for a single RK4 iteration would be: $24*N*n +23*N$. 
-In the case of the Vortex Roll-up kernel, only two SpMVs and one AXPY are required which drops the total operation count to: $16*N*n + 15*N$. 
+In the case of the Vortex Roll-up kernel, only two SpMVs and one AXPY are required which would drop the total operation count to: $16*N*n + 15*N$. 
 
 The GFLOP/sec is computed as 
 \begin{align}
@@ -30,29 +30,29 @@ GFLOP/sec = 10^{-9} * Operations / t_{RK4}
 \begin{figure}
 \centering
 \begin{subfigure}[t]{0.425\textwidth}
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/gflops_cpu_1proc_oneWarpPerStencil-eps-converted-to.pdf}
+\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/gflops_cpu_1proc_oneWarpPerStencil.pdf}
 \caption{One warp per stencil kernel on one GPU in Keeneland}
 \label{fig:gflops_cpu_1proc_keeneland}
-\end{subfigure} 
-
+\end{subfigure} \\
 \begin{subfigure}[t]{0.425\textwidth}
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/gflops_gpu_1proc_oneWarpPerStencil-eps-converted-to.pdf}
+\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/gflops_gpu_1proc_oneWarpPerStencil.pdf}
 \caption{One warp per stencil kernel on one GPU in Keeneland}
 \label{fig:gflops_gpu_1proc_oneWarp_keeneland}
 \end{subfigure} 
+\quad
 \begin{subfigure}[t]{0.425\textwidth}
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1proc_oneWarpPerStencil-eps-converted-to.pdf}
+\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/speedup_1proc_oneWarpPerStencil.pdf}
 \caption{One warp per stencil kernel on one GPU in Keeneland}
 \label{fig:speedup_1proc_oneWarp_keeneland}
 \end{subfigure} 
-
 \begin{subfigure}[t]{0.425\textwidth}
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/gflops_gpu_1proc_oneThreadPerStencil-eps-converted-to.pdf}
+\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/gflops_gpu_1proc_oneThreadPerStencil.pdf}
 \caption{One warp per stencil kernel on one GPU in Keeneland}
 \label{fig:gflops_gpu_1proc_oneThread_keeneland}
 \end{subfigure}
+\quad
 \begin{subfigure}[t]{0.425\textwidth}
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1proc_oneThreadPerStencil-eps-converted-to.pdf}
+\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/speedup_1proc_oneThreadPerStencil.pdf}
 \caption{One warp per stencil kernel on one GPU in Keeneland}
 \label{fig:speedup_1proc_oneThread_keeneland}
 \end{subfigure} 
@@ -71,19 +71,19 @@ The super-linear speedup is due to improved caching on processors as individual 
 \centering
 \begin{subfigure}[t]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1CPU_vs_NCPU.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv_cosine/speedup_1CPU_vs_NCPU.pdf}
 \caption{Multi-CPU strong scaling on Keeneland for one warp per stencil. Problem size is sufficiently large to hide latency in MPI communication.}
 \label{fig:alltoall_multicpu_scaling}
 \end{subfigure} 
 \begin{subfigure}[t]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1CPU_vs_NGPU_WarpPerStencil.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv_cosine/speedup_1CPU_vs_NGPU_WarpPerStencil.pdf}
 \caption{Multi-GPU strong scaling vs one CPU on Keeneland for one warp per stencil}
 \label{fig:alltoall_multigpu_vs_cpu_scaling}
 \end{subfigure} 
 \begin{subfigure}[t]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1GPU_vs_NGPU_WarpPerStencil.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv_cosine/speedup_1GPU_vs_NGPU_WarpPerStencil.pdf}
 \caption{Multi-GPU strong scaling vs one GPU on Keeneland for one warp per stencil}
 \label{fig:alltoall_multigpu_vs_gpu_scaling}
 \end{subfigure} 
@@ -93,13 +93,13 @@ The super-linear speedup is due to improved caching on processors as individual 
 \centering
 \begin{subfigure}[t]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/multiCPU_costs.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv_cosine/multiCPU_costs.pdf}
 \caption{Multi-CPU}
 \label{fig:alltoall_multicpu_costs}
 \end{subfigure} 
 \begin{subfigure}[t]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/multiGPU_warp_costs.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv_cosine/multiGPU_warp_costs.pdf}
 \caption{Multi-GPU}
 \label{fig:alltoall_multigpu_costs}
 \end{subfigure} 
