Using package refcheck to look for equations and figure numbers that are missing

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -48,6 +48,8 @@
 
 
 \usepackage{xcolor}
+
+\usepackage{refcheck}
 % Sepia
 \definecolor{myBGcolor}{HTML}{F6F0D6}
 \definecolor{myTextcolor}{HTML}{4F452C}
