--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -49,9 +49,9 @@ numerical modeling community today revolves around Radial Basis Functions (RBFs)
 RBFs are a class of radially symmetric functions (i.e.,
 symmetric about a point, $x_j$, called the \emph{center}) of the
 form: 
-	\begin{equation} 
+	\begin{equation*} 
 		\phi_j(\vx) = \phi(r(\vx))
-	\end{equation} 
+	\end{equation*} 
 where the value of the univariate function $\phi$ is a
 function of the Euclidean distance from the center point $\vx_j$ given by
 $r(\vx) = ||\vx-\vx_j||_2 = \sqrt{(x-x_j)^2 + (y-y_j)^2 + (z-z_j)^2}$. Examples of
